# StatsOverlay

./: .gitignore  CMakeLists.txt  HWIDActivator.py  README.md  ScanDisplay.py  data (1).replay  data.replay  genkey.py  main.cpp  main.py  main.spec  parse_replay.py  replay.py  replay_parser.cpp  server.py  stats.py  stats.spec  test.cpp  test.py
classes/: ApiController.h  GraphicsPoints.h  MainStats.h  MasteryStats.h  OtherStats.h  RatingStats.h  VehicleStats.h  bindings.cpp  bindings.exp  bindings.lib  data.replay  replay.cpp  replay.exp  replay.h  replay.lib  stats.pyd
modules/main_overlay/: main_overlay.cpp  main_overlay.h  main_resources.qrc  resources.qrc
modules/main_overlay/activate/: activation_window.cpp  activation_window.h
modules/main_overlay/controller/: ApiController.h  HWID.h  ParseReplay.h  ReplayTracker.cpp  ReplayTracker.h  ReplayTracker.md  cacert_resources.qrc
modules/main_overlay/controller/data/: MainStats.h  MainStatsData.h  MasteryStatsData.h  OtherStatsData.h  RatingStatsData.h  VehicleStatsData.h  vehicles_data_resources.qrc
modules/main_overlay/widgets/gun_marks/: gun_marks.cpp  gun_marks.h  gun_marks.qrc
modules/main_overlay/widgets/gun_marks/gunmarks_window/: gunmarks_window.cpp  gunmarks_window.h  gunmarks_window.qrc
modules/main_overlay/widgets/info_page/: info_page.cpp  info_page.h  info_resources.qrc
modules/main_overlay/widgets/main_stats/: main_stats.cpp  main_stats.h  main_stats_resources.qrc
modules/main_overlay/widgets/other_stats/: other_stats.cpp  other_stats.h  other_stats_resources.qrc
modules/main_overlay/widgets/player_stats/: player_stats.cpp  player_stats.h  player_stats.qrc
modules/main_overlay/widgets/player_stats/split_players/: players_window.cpp  players_window.h  players_window.qrc
modules/main_overlay/widgets/rating_stats/: rating_stats.cpp  rating_stats.h  rating_stats_resorces.qrc  rating_stats_resources.qrc
modules/main_overlay/widgets/vehicles_stats/: vehicles_resources.qrc  vehicles_stats.cpp  vehicles_stats.h
modules/main_overlay/widgets/widgets_page/: widgets.cpp  widgets.h  widgets.qrc
modules/main_overlay/widgets/widgets_page/dmg_window/: dmg.cpp  dmg.h  dmg.qrc
modules/main_overlay/widgets/widgets_page/history_window/: hdmg.cpp  hdmg.h  hdmg.qrc
modules/main_overlay/widgets/widgets_page/widgets_window/: FlowLayout.cpp  FlowLayout.h  widgets_window.cpp  widgets_window.h
modules/sub_overlay/: sub_overlay.cpp  sub_overlay.h  sub_resources.qrc
resources/vehicles/: lesta.json  vehicles_db.json
src/tank-list/: tanks.json
